fix: tabs and item card on mobile

--- a/assets/css/order.css
+++ b/assets/css/order.css
@@ -30,9 +30,3 @@
 .products.active {
   display: grid;
 }
-
-@media (max-width: 768px) {
-  .tabs {
-    max-width: 550px;
-  }
-}
